Removing strict transport policy

--- a/.htaccess
+++ b/.htaccess
@@ -1,5 +1,5 @@
 # https://raymii.org/s/tutorials/HTTP_Strict_Transport_Security_for_Apache_NGINX_and_Lighttpd.html
-Header always set Strict-Transport-Security max-age=31536000
+# Header always set Strict-Transport-Security max-age=31536000
 
 # https://content-security-policy.com/
 Header set Content-Security-Policy "default-src 'self';"
